post listing card css overlap fix for descriptions

--- a/assets/css/posts.css
+++ b/assets/css/posts.css
@@ -69,15 +69,23 @@
         width: 100%;
     }
     .sample-post-text {
+        all: unset;
+        text-align: left;
+        padding: 0;
+        margin: 0;
         z-index: 1;
         position: relative;
         width: inherit;
     }
     .sample-post-text p {
+        font-family: Arial, Helvetica, sans-serif;
+        text-align: left;
+        position: relative;
         width: inherit;
         padding: 0;
-        padding-top: 12px;
-        font-size: 12pt;
+        margin: 0;
+        /* padding-top: 20px; */
+        font-size: 11pt;
     }
 }
 
